crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__opaque_type.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: type Response
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: OpaqueType(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: "Response",
            },
        ),
    },
}
